# musicplayer

./: CMakeLists.txt  README.md
include/: AudioPlayer.h  MusicPlayer.h  Playlist.h  SFMLAudioPlayer.h  WindowsAudioPlayer.h
src/: main.cpp
